--- a/WorldOfTheThreeKingdoms.iOS/Info.plist
+++ b/WorldOfTheThreeKingdoms.iOS/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.Zhsan.WorldOfTheThreeKingdoms</string>
 	<key>MinimumOSVersion</key>
-	<string>7.0</string>
+	<string>8.0</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
@@ -16,7 +16,7 @@
 	<key>CFBundleName</key>
 	<string>中華三國志</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.1</string>
+	<string>1.2</string>
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
@@ -34,6 +34,10 @@
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon-1.appiconset</string>
 	<key>CFBundleVersion</key>
-	<string>3</string>
+	<string>1200</string>
+	<key>UIStatusBarHidden</key>
+	<true/>
+	<key>XSLaunchImageAssets</key>
+	<string>Assets.xcassets/LaunchImage-1.launchimage</string>
 </dict>
 </plist>
