--- a/WorldOfTheThreeKingdoms.Play/Properties/AndroidManifest.xml
+++ b/WorldOfTheThreeKingdoms.Play/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="WorldOfTheThreeKingdoms.Android" android:versionCode="1230" android:versionName="1.2.3.0" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.zhsan.threekingdoms" android:versionCode="1220" android:versionName="1.2.2.0" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
