--- a/WorldOfTheThreeKingdoms.Android/packages.config
+++ b/WorldOfTheThreeKingdoms.Android/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="SharpZipLib" version="1.1.0" targetFramework="monoandroid90" />
   <package id="System.Buffers" version="4.4.0" targetFramework="monoandroid90" />
   <package id="System.Memory" version="4.5.1" targetFramework="monoandroid90" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="monoandroid90" />
