--- a/WorldOfTheThreeKingdomsEditor/WorldOfTheThreeKingdomsEditor.csproj
+++ b/WorldOfTheThreeKingdomsEditor/WorldOfTheThreeKingdomsEditor.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>WorldOfTheThreeKingdomsEditor</RootNamespace>
     <AssemblyName>WorldOfTheThreeKingdomsEditor</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -90,6 +90,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="PersonIDRelationsTab.cs" />
+    <Compile Include="UserControl1_labeltext.xaml.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -100,6 +102,9 @@
     </Compile>
     <Compile Include="ArchitectureKindTab.cs" />
     <Compile Include="BiographyTab.cs" />
+    <Compile Include="TerrainDetailTab.cs" />
+    <Compile Include="DictionaryintTab.cs" />
+    <Compile Include="RegionTab.cs" />
     <Compile Include="sce.xaml.cs">
       <DependentUpon>sce.xaml</DependentUpon>
     </Compile>
@@ -114,6 +119,7 @@
     <Compile Include="Sets.xaml.cs">
       <DependentUpon>Sets.xaml</DependentUpon>
     </Compile>
+    <Compile Include="StateTab.cs" />
     <Compile Include="TechniqueTab.cs" />
     <Compile Include="TroopEventEffectKindTab.cs" />
     <Compile Include="EventEffectKindTab.cs" />
@@ -158,6 +164,10 @@
     <Page Include="Sets.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControl1_labeltext.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
