新增設施武將修練影響

--- a/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
+++ b/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
@@ -997,6 +997,20 @@
     <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind330.cs" />
     <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3300.cs" />
     <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3310.cs" />
+    <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3514.cs" />
+    <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3513.cs" />
+    <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3512.cs" />
+    <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3511.cs" />
+    <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3510.cs" />
+    <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3508.cs" />
+    <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3507.cs" />
+    <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3506.cs" />
+    <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3505.cs" />
+    <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3504.cs" />
+    <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3503.cs" />
+    <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3502.cs" />
+    <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3501.cs" />
+    <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3500.cs" />
     <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind3400.cs" />
     <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind350.cs" />
     <Compile Include="GameObjects\Influences\InfluenceKindPack\InfluenceKind351.cs" />
